docs/v1.0.0/Traffic-Vector-Overlay.md
[<img src="https://about.mappls.com/images/mappls-b-logo.svg" height="60"/> </p>](https://www.mapmyindia.com/api)

# [Mappls Traffic Vector Tiles Overlay](#Mappls-Traffic-Vector-Tiles-Overlay)

Mappls Traffic Vector Tiles is an overlay that you can use to display real-time traffic conditions on a map.  
The overlay provides constantly updating congestion information best viewed on Mappls map (Available with all styles of Mappls Map). 

Read more for [List of Available Styles](https://github.com/mappls-api/mappls-android-sdk/blob/main/docs/v1.0.0/Map-Style.md)

## Preview Image

[<img src="https://about.mappls.com/api/api_doc_assets/traffic_overlay.jpeg" height="450"/> </p>](https://about.mappls.com/api/)


## Implementation
To enable/disable Tiles Overlay follow the below code snippet. Default is false.
```java
mapplsMap.enableTraffic(true); //To enable/disable all Traffic
```
To choose from different traffic flow information use below referred code. Default is true.

```java
mapplsMap.enableTrafficClosure(false); //To enable/disable Traffic Closure Overlay 

mapplsMap.enableTrafficFreeFlow(false); //To enable/disable Free Flow (Green) Overlay 

mapplsMap.enableTrafficNonFreeFlow(false); //To enable/disable Non free flow (Red/Orange) Overlay 

mapplsMap.enableTrafficStopIcon(false); //To enable/disable Traffic Closure Overlay 
```

  
Please Note : Custom styles overlaid with traffic tiles are not offered coherently. 
Contact [API Support](apisupport@mappls.com) in case of custom styles and details of available custom claims of traffic tiles.

<br>

For any queries and support, please contact: 

[<img src="https://about.mappls.com/images/mappls-logo.svg" height="40"/> </p>](https://about.mappls.com/api/)
Email us at [apisupport@mappls.com](mailto:apisupport@mappls.com)


![](https://www.mapmyindia.com/api/img/icons/support.png)
[Support](https://about.mappls.com/contact/)
Need support? contact us!

<br></br>
<br></br>

[<p align="center"> <img src="https://www.mapmyindia.com/api/img/icons/stack-overflow.png"/> ](https://stackoverflow.com/questions/tagged/mappls-api)[![](https://www.mapmyindia.com/api/img/icons/blog.png)](https://about.mappls.com/blog/)[![](https://www.mapmyindia.com/api/img/icons/gethub.png)](https://github.com/Mappls-api)[<img src="https://mmi-api-team.s3.ap-south-1.amazonaws.com/API-Team/npm-logo.one-third%5B1%5D.png" height="40"/> </p>](https://www.npmjs.com/org/mapmyindia) 



[<p align="center"> <img src="https://www.mapmyindia.com/june-newsletter/icon4.png"/> ](https://www.facebook.com/Mapplsofficial)[![](https://www.mapmyindia.com/june-newsletter/icon2.png)](https://twitter.com/mappls)[![](https://www.mapmyindia.com/newsletter/2017/aug/llinkedin.png)](https://www.linkedin.com/company/mappls/)[![](https://www.mapmyindia.com/june-newsletter/icon3.png)](https://www.youtube.com/channel/UCAWvWsh-dZLLeUU7_J9HiOA)




<div align="center">@ Copyright 2022 CE Info Systems Ltd. All Rights Reserved.</div>

<div align="center"> <a href="https://about.mappls.com/api/terms-&-conditions">Terms & Conditions</a> | <a href="https://about.mappls.com/about/privacy-policy">Privacy Policy</a> | <a href="https://about.mappls.com/pdf/mapmyIndia-sustainability-policy-healt-labour-rules-supplir-sustainability.pdf">Supplier Sustainability Policy</a> | <a href="https://about.mappls.com/pdf/Health-Safety-Management.pdf">Health & Safety Policy</a> | <a href="https://about.mappls.com/pdf/Environment-Sustainability-Policy-CSR-Report.pdf">Environmental Policy & CSR Report</a>

<div align="center">Customer Care: +91-9999333223</div>

